# aws-log-watch-notifier

./: .pre-commit-config.yaml  README.md  pyproject.toml  run-generic-log-dev.sh  run-generic-log-prod.sh  run-update-cmr-attributes-dev.sh  run-update-cmr-attributes-prod.sh
requirements/: bootstrap.in  bootstrap.txt  constraints.txt  deployment.txt  development.in  development.txt  production.in  production.txt
scripts/: compile-requirements.sh  sort-pyproject-toml.sh  sync-deployment-requirements.sh  sync-development-requirements.sh  sync-production-requirements.sh
src/aws_log_watch_notifier/cli/: entrypoint.py  notify.py  root.py
src/aws_log_watch_notifier/client/: poll.py
