# Sort me often using ./scripts/sort-pyproject-toml.sh

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools-scm[toml]~=8.1", "setuptools~=75.8", "wheel~=0.45"]

[project]
authors = [{ email = "sspencer@arine.io", name = "Shane R. Spencer" }]
description = "AWS Log Watch Notifier"
dynamic = ["dependencies", "optional-dependencies", "version"]
name = "aws-log-watch-notifier"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
aws-log-watch-notifier = "aws_log_watch_notifier.cli.entrypoint:entrypoint"

[tool.black]
line-length = 120

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "$version"
update_changelog_on_bump = true
version_provider = "scm"
version_scheme = "pep440"

[tool.flake8]
doctests = true
max-line-length = 120
per-file-ignores = """
    tests/**: S101
"""

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
namespace_packages = true

[tool.setuptools.dynamic.dependencies]
file = ["./requirements/production.in"]

[tool.setuptools.dynamic.optional-dependencies]
development = { file = ["./requirements/development.in"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
